[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/character/hero/hero01/move03.png" type="Texture" id=1]
[ext_resource path="res://assets/character/hero/hero01/topMain.png" type="Texture" id=2]
[ext_resource path="res://scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/character/hero/hero01/attack02.png" type="Texture" id=4]
[ext_resource path="res://assets/character/hero/hero01/attack01.png" type="Texture" id=5]
[ext_resource path="res://assets/character/hero/hero01/legMain.png" type="Texture" id=6]
[ext_resource path="res://assets/character/hero/hero01/move02.png" type="Texture" id=7]
[ext_resource path="res://assets/character/hero/hero01/move04.png" type="Texture" id=8]
[ext_resource path="res://assets/character/hero/hero01/move01.png" type="Texture" id=9]
[ext_resource path="res://assets/soundEffects/arrow.wav" type="AudioStream" id=11]
[ext_resource path="res://scripts/ProgressBar.gd" type="Script" id=12]
[ext_resource path="res://assets/progTop.png" type="Texture" id=13]
[ext_resource path="res://assets/progBot.png" type="Texture" id=14]
[ext_resource path="res://assets/progProg.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "shot2",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 8 ) ],
"loop": true,
"name": "move",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "defaultTop",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "shot1",
"speed": 2.08
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "defaultLeg",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 85.1663
height = 169.214

[node name="Player" type="Area2D" groups=[
"player",
]]
z_index = 1
script = ExtResource( 3 )

[node name="Arrow_position" type="Position2D" parent="."]
position = Vector2( 125.932, -75.5998 )

[node name="shotDelay" type="Timer" parent="." groups=[
"player",
]]

[node name="Skin" type="TextureRect" parent="."]
margin_left = -146.0
margin_top = -234.4
margin_right = 54.0
margin_bottom = 221.6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="AnimatedSprite" parent="Skin"]
position = Vector2( 105.597, 108.132 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 1 )
animation = "shot2"
playing = true

[node name="Legs" type="AnimatedSprite" parent="Skin"]
position = Vector2( 75.7279, 304.165 )
scale = Vector2( 0.6, 0.5 )
frames = SubResource( 1 )
animation = "move"
frame = 1
speed_scale = 1.5
playing = true

[node name="ProgressBar" type="TextureProgress" parent="Skin"]
visible = false
anchor_left = -0.352
anchor_top = 0.001
anchor_right = -0.352
anchor_bottom = 0.001
margin_left = 31.8352
margin_top = 68.876
margin_right = 163.835
margin_bottom = 194.876
rect_scale = Vector2( 0.6, 0.6 )
step = 0.0
value = 100.0
rounded = true
texture_under = ExtResource( 14 )
texture_over = ExtResource( 13 )
texture_progress = ExtResource( 15 )
fill_mode = 4
tint_progress = Color( 0.847059, 0.768627, 0.243137, 0.796078 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Skin/ProgressBar"]
process_mode = 0
wait_time = 0.02

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -70.6411, -49.3521 )
shape = SubResource( 2 )

[node name="arrowSound" type="AudioStreamPlayer2D" parent="." groups=[
"sound",
]]
stream = ExtResource( 11 )
bus = "Sound"

[node name="invicibleTime" type="Timer" parent="."]
wait_time = 1.05
one_shot = true

[node name="colorMark" type="Timer" parent="."]
wait_time = 0.15
[connection signal="timeout" from="shotDelay" to="." method="canShotAgain"]
[connection signal="timeout" from="Skin/ProgressBar/Timer" to="Skin/ProgressBar" method="_on_Timer_timeout"]
[connection signal="timeout" from="invicibleTime" to="." method="_on_invicibleTime_timeout"]
[connection signal="timeout" from="colorMark" to="." method="_on_colorMark_timeout"]
